tekton/eventlistener-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-el-ingress
  namespace: tekton-example
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  rules:
    - host: squad2ingress.westeurope.cloudapp.azure.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: el-github-listener
                port:
                  name: http-listener
  tls:
    - hosts:
        - squad2ingress.westeurope.cloudapp.azure.com
      secretName: el-tls-secret
